--- a/crossingroad.ipynb
+++ b/crossingroad.ipynb
@@ -7,12 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d9d89890",
    "metadata": {},
    "outputs": [],
@@ -40,7 +41,9 @@
    "source": [
     "alpha = 0.1\n",
     "gamma = 0.9\n",
-    "epsilon = 0.1"
+    "epsilon = 0.1\n",
+    "\n",
+    "episode_rewards = []"
    ]
   },
   {
@@ -51,8 +54,9 @@
    "outputs": [],
    "source": [
     "for episode in range(100):\n",
-    "    state = 1\n",
+    "    state = 0\n",
     "    done = False\n",
+    "    total_reward = 0\n",
     "    \n",
     "    while not done:\n",
     "        if np.random.random() < epsilon:\n",
@@ -70,13 +74,30 @@
     "\n",
     "        next_state = state + (1 if action == 2 else (-1 if action == 0 else 0))\n",
     "        reward = 1 if next_state == num_states-1 else -0.1  \n",
-    "        \n",
+    "        total_reward += reward\n",
     "\n",
     "        Q[state, action] = Q[state, action] + alpha * (reward + gamma * np.max(Q[next_state]) - Q[state, action])\n",
     "        \n",
     "        state = next_state\n",
     "        if state == num_states-1:\n",
-    "            done = True"
+    "            done = True\n",
+    "\n",
+    "    episode_rewards.append(total_reward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33018637",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(episode_rewards)\n",
+    "plt.xlabel(\"Episode\")\n",
+    "plt.ylabel(\"Total Reward\")\n",
+    "plt.title(\"Training Progress\")\n",
+    "plt.show()"
    ]
   }
  ],
